# gazebo

examples/plugins/gui_overlay_plugin_spawn/: CMakeLists.txt  DFGUIPlugin.cc  DFGUIPlugin.hh  DFPlugin.cc  DFPlugin.hh  LiftDragPlugin.cc  LiftDragPlugin.hh
examples/plugins/gui_overlay_plugin_spawn/msgs/: CMakeLists.txt  ductedfan.proto
gazebo/common/: PID.cc
models/ductedfan/: model.config  model.sdf
models/ductedfan/meshes/: DF - Product-gazebo-1.STL  DF - control surface-60-2-1.STL  DF - control surface-60-67-3.STL  DF - fan-1.STL  DF - fan-2.STL
models/ductedfan/old/: base_link.STL  c1.STL  c2.STL  model.config  model.sdf  r1.STL  r2.STL
plugins/: CessnaPlugin.cc
worlds/: ductedfan.world
